--- a/src/App.css
+++ b/src/App.css
@@ -29,11 +29,6 @@
   height: 90vh;
 }
 
-.my-music {
-  display: flex;
-  width: 10vw;
-  justify-content: center;
-}
 
 /* right upper portion of the app interface, not position fixed */
 .play-list {
@@ -43,23 +38,10 @@
   height:100vh;
   margin-left: 16.67vw;
   margin-top: 6vh;
-}
-
-
-.name-of-play-list{
-  margin-top: 0vw;
-  position: fixed;
-  background-color: white;
-  width: 83.33vw;
-  right: 0px;
-  margin-left: 10vw;
-}
-
-.information-of-play-list{
-
-  margin-top: 10vh;
+  margin-bottom:10vh;
 
 }
+
 
 /* lower portion of the app interface */
 .player-app {
@@ -85,14 +67,12 @@
   bottom: 0px;
 }
 
-/* nothing is loaded */
+/* nothing is loaded layout*/
 .player-alter {
-
   display: flex;
   align-content: center;
   align-items: center;
   justify-content: space-evenly;
-
 }
 
 .song-name-and-slide-bar{
@@ -101,33 +81,54 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-content: flex-start;  
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .track-artist {
 
   font-family: 'Times New Roman';
-
+  white-space: nowrap; 
+  width: 40vw; 
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-.duration-alter {
-  padding-left: 50px;
-  padding-top: 3px;
+.track-animation {
+  width: 40vw;
+  animation-name: slide;
+  animation-duration: 30s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  position: relative;
+}
+
+@keyframes slide {
+  0% {left: 0vw;}
+  25% {left: -30vw;}
+  50% {left: 0vw;}
+  75% {left: 30vw;}
+  100% {left: 0vw;}
 }
 
 .duration {
+  padding-left: 10vw;
+  padding-top: 3px;
+}
+
+.slider {
   width: 70vw;
 }
 
-
+/* Keep CSS, in control_interface.js, since only one class */
 .controller-interface { /* This is the three buttons */
   display: flex;
   justify-content: space-evenly;
   width: 30vw;
   align-items: baseline; /* This is for meet in the middle for the play,prev,next buttons */
-  
+  margin-top: 1vh;
 }
 
+/* Keep just in case messed up the animation*/
 .spin-image {
   width: 10vh;
   height: 10vh;
